2013-11-15  Peter Broadbery <p.broadbery@gmail.com>

	* src/interp/interop.boot: Don't try to evaluate conditions on
	categories where the category is already unconditionally part of a
	category's parents.

2013-11-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/g-opt.boot: Use different symbols for labels
	and values.

2013-10-12  Ralf Hemmecke  <ralf@hemmecke.org>

	* src/aldor/Makefile.in: make clean now does not remove cliques.as

2013-09-30  Raoul Bourquin <raoulb@bluewin.ch>

	* src/algebra/combfunc.spad.pamphlet: Evaluate the lambertW
	function for the special value at -1/e.

2013-09-27  Ralf Hemmecke  <ralf@hemmecke.org>
	* src/aldor/Makefile.in, src/aldor/Makefile3.in,
	configure.ac: Update for free Aldor.
	src/aldor/aldor: Add needed files from Aldor distribution.

2013-09-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in, src/interp/Makefile.in,
	src/doc/Makefile.in, src/etc/Makefile.in: Makefile fixes.
	src/scripts/mkdist.sh: Update.

2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/interp/scwrap2.boot:
	Restore pile mode after ')read' or ')compile'.

2013-09-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet,
	src/algebra/curve.spad.pamphlet: Fix wrong changes of variables.

2013-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet,
	src/algebra/funcpkgs.spad.pamphlet: Factor Trager
	resultant in appropriate extension.

2013-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intaf.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet: Eliminate irrationals
	introduced by Euler substitution.

2013-09-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Update for future gcl-2.6.1x versions.

2013-09-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/incl.boot, src/share/doc/msgs/s2-us.msgs:
	Fix error messages about included files.

2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
