@@ -1049,3 +1049,8 @@
     (DEFCONST |G-axclique_integer_685864888| (cons #'H-integer nil))
     (DEFCONST |G-axclique_error_011667951| (cons #'H-error nil))
 )
+
+;; hashCombine for the code generated by the Aldor compiler
+
+(defun |SIntHashCombine| (x y)
+    (boot::|hashCombine| x y))
