@@ -1,5 +1,11 @@
 2013-11-15  Peter Broadbery <p.broadbery@gmail.com>
 
+	* src/interp/hashcode.boot, src/interp/foam_l.lisp: Sync with
+	aldor hash function. Note that this change makes older versions of
+	aldor incompatible with this code.
+
+2013-11-15  Peter Broadbery <p.broadbery@gmail.com>
+
 	* src/interp/interop.boot: Don't try to evaluate conditions on
 	categories where the category is already unconditionally part of a
 	category's parents.
